--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "masonry-layout": "^4.2.2",
     "vue": "^2.6.10",
+    "vue-loading-spinner": "^1.0.11",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
